fixed footer and alignment

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,20 +19,6 @@ h6, .h6 {
   font-family: 'Roboto', sans-serif;
 }
 
-#background {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  min-width: 100%;
-  min-height: 100%;
-  width: auto;
-  height: 30%;
-  z-index: -100;
-  -webkit-transform: translateX(-50%) translateY(-50%);
-  -webkit-transform: translateX(-50%) translateY(-50%);
-  background-size: cover;
-}
-
 #nav-image {
   height: 30px;
 }
@@ -232,9 +218,9 @@ html {
 
 /* footer */
 
-#custom-footer {
-  position: relative;
-  top: 100%;
+#footer {
+  position: sticky;
+  top:100%;
   background-color: #bbdefb;
   box-shadow: 0px -1px 5px;
   background-color: #bbdefb;
@@ -269,6 +255,10 @@ html {
   margin-right:auto;
   box-shadow: 0px 1px 10px;
 
+}
+
+#homepage-content {
+  postition: relative
 }
 
 #what-we-do-body {
